# world_cup_qualifiers_predictor_api

./: manage.py  pyproject.toml
app/: config.py  models.py  serializers.py  views.py
app/data/: teams.txt
app/data/torch/: teams_ai.chkpt  teams_ai_api.chkpt
app/migrations/: 0001_initial.py  0002_alter_match_winner.py  0003_alter_match_winner.py  0004_alter_match_id.py  0005_alter_match_winner.py
app/service/: __init__.py  load_data_to_db.py  neural_network.py
app/tests/: test_neural_network.py
world_cup_qualifiers_predictor_api/: asgi.py  settings.py  urls.py  wsgi.py
